syntax = "proto3";

package ova.service;

option go_package = "github.com/ozonva/ova-service-api";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";



service ServiceAPI {
  rpc CreateServiceV1(CreateServiceV1Request) returns (CreateServiceV1Response);
  rpc DescribeServiceV1(DescribeServiceV1Request) returns (DescribeServiceV1Response);
  rpc ListServicesV1(ListServicesV1Request) returns (ListServicesV1Response);
  rpc RemoveServiceV1(RemoveServiceV1Request) returns (google.protobuf.Empty);
}

message CreateServiceV1Request {
  uint64 user_id = 1;
  string description = 2;
  string service_name = 3;
  string service_address = 4;
  google.protobuf.Timestamp when = 5;
}

message CreateServiceV1Response {
  string uuid = 1;
}

message DescribeServiceV1Request {
  string uuid = 1;
}

message DescribeServiceV1Response {
  string uuid = 1;
  uint64 user_id = 2;
  string description = 3;
  string service_name = 4;
  string service_address = 5;
  google.protobuf.Timestamp when = 6;
  google.protobuf.Timestamp when_utc = 7;
}

message ListServicesV1Request {
  uint64 limit = 1;
  uint64 offset = 2;
}

message ListServicesV1Response {
  repeated ServiceShortInfoV1Response service_short_info = 1;
}

message ServiceShortInfoV1Response {
  string uuid = 1;
  uint64 user_id = 2;
  string service_name = 3;
  google.protobuf.Timestamp when = 4;
}

message RemoveServiceV1Request {
  string uuid = 1;
}
